--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 huggingface_hub==0.23.2
-langchain_chroma==0.1.1
-langchain_community==0.2.6
-langchain_core==0.2.10
-langchain_text_splitters==0.2.2
+langchain==0.1.20
+langchain-chroma==0.1.1
+langchain-community==0.0.38
+langchain-core==0.1.52
+langchain-experimental==0.0.59
+langchain-huggingface==0.0.3
+langchain-openai==0.1.7
+langchain-text-splitters==0.0.2
+langchainhub==0.1.17
 pandas==1.5.3
 pandasai==2.2.7
 streamlit==1.35.0
