--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,9 @@ langchainhub==0.1.17
 pandas==1.5.3
 pandasai==2.2.7
 streamlit==1.35.0
-streamlit-pdf-viewer==0.0.14
-chromadb==0.4.0
-chroma-hnswlib==0.7.1  
-fastapi==0.99.1 
-pulsar-client==3.5.0 
-pydantic==1.10.17 
-starlette==0.27.0
+streamlit-pdf-viewer==0.0.14 
+chroma-hnswlib==0.7.3 
+build==1.2.1
+chromadb==0.5.3
 PyMuPDF==1.24.5
 PyMuPDFb==1.24.3
