--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 huggingface_hub==0.23.2
 langchain==0.1.20
-langchain-chroma==0.0.5
+langchain-chroma==0.1.0rc1
 langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-huggingface==0.0.3
