--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 huggingface_hub==0.23.2
 langchain==0.1.20
-langchain-chroma==0.1.0rc1
+langchain-chroma==0.1.1
 langchain-community==0.0.38
 langchain-core==0.1.52
 langchain-huggingface==0.0.3
@@ -11,6 +11,6 @@ pandas==2.0.3
 pandasai==2.2.7
 streamlit==1.35.0
 streamlit-pdf-viewer==0.0.14 
-chromadb==0.3.29
+chromadb==0.5.2
 PyMuPDF==1.24.5
 PyMuPDFb==1.24.3
