--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pandas==1.5.3
 pandasai==2.2.7
 streamlit==1.35.0
 streamlit-pdf-viewer==0.0.14 
+sqlite3==3.35.0
 chromadb==0.4.1
 PyMuPDF==1.24.5
 PyMuPDFb==1.24.3
