--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,2 @@
 [theme]
-primaryColor="#FF4B4B"
-backgroundColor="#000000"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#31333F"
-font="sans serif"
+backgroundColor="#000000""
